--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "vite build && cp dist/index.html dist/404.html && gh-pages -d dist"
+    "deploy": "vite build && powershell Copy-Item -Path dist/index.html -Destination dist/404.html && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.1",
